fix: tabcomplete on bukkit