@@ -1,14 +1,16 @@
 package me.andyreckt.raspberry.util;
 
+import lombok.SneakyThrows;
 import lombok.experimental.UtilityClass;
 
 import java.io.IOException;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.net.URL;
 import java.security.CodeSource;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Enumeration;
+import java.util.*;
+import java.util.function.Consumer;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
@@ -24,6 +26,17 @@ public class RaspberryUtils {
         } else {
             return str == null && prefix == null;
         }
+    }
+
+    public <T> List<T> performOnImmutable(List<T> list, Consumer<List<T>> action) {
+        try {
+            action.accept(list);
+        } catch (UnsupportedOperationException ex) {
+            list = new ArrayList<>(list);
+            action.accept(list);
+        }
+
+        return list;
     }
 
     public Collection<Class<?>> getClassesInPackage(Class<?> main, String packageName) {
@@ -75,5 +88,48 @@ public class RaspberryUtils {
         }
 
         return Collections.unmodifiableCollection(classes);
+    }
+
+    @SneakyThrows
+    public void setFinalStatic(Field field, Object newValue) {
+        field.setAccessible(true);
+
+        Field modifiersField = getModifiersField();
+        modifiersField.setAccessible(true);
+        modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
+
+        field.set(null, newValue);
+    }
+
+    @SneakyThrows
+    public void setFinal(Field field, Object instance, Object newValue) {
+        field.setAccessible(true);
+
+        Field modifiersField = getModifiersField();
+        modifiersField.setAccessible(true);
+        modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
+
+        field.set(instance, newValue);
+    }
+
+    // --add-opens java.base/java.lang=ALL-UNNAMED
+    public Field getModifiersField() throws NoSuchFieldException {
+        try {
+            return Field.class.getDeclaredField("modifiers");
+        } catch (NoSuchFieldException e) {
+            try {
+                Method getDeclaredFields0 = Class.class.getDeclaredMethod("getDeclaredFields0", boolean.class);
+                getDeclaredFields0.setAccessible(true);
+                Field[] fields = (Field[]) getDeclaredFields0.invoke(Field.class, false);
+                for (Field field : fields) {
+                    if ("modifiers".equals(field.getName())) {
+                        return field;
+                    }
+                }
+            } catch (ReflectiveOperationException ex) {
+                e.addSuppressed(ex);
+            }
+            throw e;
+        }
     }
 }
